Fixes a css bug that was throwing off vertical alignment in firefox.

--- a/FSM Prototype/Deploy/fsm.css
+++ b/FSM Prototype/Deploy/fsm.css
@@ -91,7 +91,7 @@ circle.node.accepting {
 
 text.nodename {
   text-anchor: middle;
-  font-family: "Ek Mukta"
+  font-family: "Ek Mukta";
   dominant-baseline: central;
   alignment-baseline: central;
   pointer-events: none;
